# AI-Coding-Harness

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PREMORTEM.md  README.md  REALITY.md  STATE.md  ide  index.html  package-lock.json  package.json
.claude/: pains.md  settings.json  smoke-test.js
.claude/hooks/: count-tools.sh  pain-check.sh  post-compact.sh  pre-compact.sh  recovery.md  session-state.sh  touched_files
.decisions/: d001.json  d002.json  d003.json  d004.json  d005.json  d006.json  d007.json  d008.json  d009.json  d010.json  d011.json  d012.json  d013.json  d014.json  d015.json  d016.json
.journals/: gap-catalogue.md  session.md  session5-interventions.md  t017.md
.modules/: context-manager.json  continuity.json  feedback-engine.json  figma-crdt.json  figma-engine.json  figma-renderer.json  figma-wasm.json  impact-analyzer.json  semantic-index.json
.slices/: create-rect.json
.snapshots/: baseline.json
.tasks/: t001.json  t002.json  t003.json  t004.json  t005.json  t006.json  t007.json  t008.json  t009.json  t010.json  t011.json  t012.json  t013.json  t014.json  t015.json  t016.json  t017.json  t018.json  t019.json  t020.json  t021.json  t022.json  t023.json  t024.json  t025.json  t026.json  t027.json  t028.json  t029.json
analysis/: message-classification-1.json  message-classification-2.json  message-classification-3.json  session-analytics.json  window-user-messages.json
app/: .vercelignore  bench-split.mjs  feature-check.mjs  fps-check.mjs  index.html  interaction-check.mjs  mcp-server.mjs  package-lock.json  package.json  tsconfig.json  vercel.json  visual-check.mjs  workflow-check.mjs
app/pkg/: figma_wasm.d.ts  figma_wasm.js  figma_wasm_bg.wasm  figma_wasm_bg.wasm.d.ts
app/public/: imports
app/src/: ai.ts  env.d.ts  main.ts  styles.css  tools.ts  (+1 more)
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: canvas2d.rs  fig_import.rs  lib.rs
(+24 files in other folders)
