[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/renderer",
    "crates/crdt",
    "crates/wasm",
    "crates/fig_import",
]
exclude = ["crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Shared across crates — single source of truth for versions
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
fontdue = "0.9"
