[package]
name = "figma-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
figma-engine = { path = "../engine" }
figma-renderer = { path = "../renderer" }
figma-crdt = { path = "../crdt" }
fig-import-crate = { path = "../fig_import", package = "fig-import" }
glam = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Path2d",
    "ImageData",
    "CanvasGradient",
    "CanvasWindingRule",
    "Document",
    "Window",
]
